fix: logo should now be correctly visible on mac

--- a/assets/css/animation-style.css
+++ b/assets/css/animation-style.css
@@ -20,6 +20,9 @@
 	40% {
 		width: 8rem;
 	}
+	40% {
+		width: 8.5rem;
+	}
 }
 
 .animate-blink{
